# rust-actixweb-boilerplate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: rust-build-test-routine.yml
src/: constants.rs  controllers.rs  main.rs  structs.rs  test.rs  utils.rs
src/constants/: responder.rs  routes.rs  urls.rs
src/controllers/: user.rs
src/controllers/crud/: create.rs  delete.rs  read.rs  update.rs
src/controllers/user/: combinator.rs  email_verification.rs  lifecycle.rs  sign_in.rs  sign_up.rs  tokanize_user.rs
src/jwt/: manager.rs
src/middleware/: guard.rs
src/structs/: jwt.rs  middleware.rs  request.rs  response.rs  user.rs
src/structs/request/: crud.rs  user.rs
src/test/: constants.rs  controllers.rs  helpers.rs  jwt.rs  validators.rs
src/test/controllers/: user.rs
src/test/controllers/user/: lifecycle.rs  sign_in.rs  sign_up.rs
src/utils/: env.rs  logging.rs  validators.rs
templates/pages/user/email_verification/: failed.html  success.html
