[package]
name = "rust-actixweb-boilerplate"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = "1.0.228"
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["full"] }
lazy_static = "1.5.0"
regex = "1.12.2"
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.100"
base64 = "0.22.1"
sha2 = "0.10.9"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
uniqer_rs = "0.0.4"
askama = "0.14.0"
